--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
 	transform: translate(-50%, -50%);
 	border: 1px solid black;
 	width: 300px;
-	height: 600px;
+	height: 620px;
 	border-radius: 40px;
 	background: #2d3436;
 }
@@ -35,7 +35,7 @@ code {
 .inputValue{
 	margin-bottom: 20px;
 	margin-left: 10px;
-	padding-top: 60px;
+	padding-top: 10px;
 }
 
 .inputValue input{
@@ -69,4 +69,17 @@ code {
 .lastName{
 	font-weight: bold;
 	padding-left: 5px;
+}
+
+h2{
+	color: #dfe6e9;
+	padding-top: 50px;
+	margin-left: 10px;
+}
+
+.user{
+	width: 40px;
+	float: left;
+	padding-top: 10px;
+	padding-right: 20px;
 }
