--- a/src/index.css
+++ b/src/index.css
@@ -12,28 +12,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+::-webkit-scrollbar{
+	width: 1px;
+}
 .fullInfo{
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	border: 1px solid black;
-	width: 300px;
+	width: 310px;
 	height: 620px;
 	border-radius: 40px;
 	background: #2d3436;
+	overflow-x: auto; 
 }
 
 .userInfo{  
  	margin: 0 10px 2px 10px;
  	border-bottom: 1px solid #636e72;
  	padding-bottom: 5px;
+ 	padding-top: 20px;
  	color: #dfe6e9;
 }
 
 .inputValue{
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	margin-left: 10px;
 	padding-top: 10px;
 }
